src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
  scroll-behavior: smooth;
}

@layer base {
  :root {
    --clr-background: 255 255 255;
    --clr-border: 0 0 0;
    --clr-content: 9 9 11;
    --clr-content-700: 63 63 70;
    --clr-content-500: 113 113 122;

    --clr-scrollbar: #b4b4b4;
    --clr-scrollbar-hover: #a1a1a1;
  }
  
  :root[data-theme='dark'] {
    --clr-background: 19 19 21;
    --clr-border: 255 255 255;
    --clr-content: 210 210 210;
    --clr-content-700: 141 141 141;
    --clr-content-500: 82 82 91;

    --clr-scrollbar: #525252;
    --clr-scrollbar-hover: #6b6b6b;
  }
}

.header {
  height: 82px;
  position: fixed;
  top: 0;
  width: 100%;
}

.previewer {
  height: calc(100vh - (82px + 56px));
  position: relative;
  top: 82px;
}

.editor-panel {
  position: fixed;
  bottom: 0;
  width: 100%;
  transform: translateY(calc(100% - 56px));
}

.editor-panel.open {
  transform: translateY(0);
}

.panel-body {
  max-height: 70vh;
}

.icon.flippable {
  transform-style: preserve-3d;
  transition: transform 0.3s;
}

.icon.flip {
  transform: rotateX(180deg);
}

.navbar .active {
  @apply font-semibold text-accent-800 bg-accent-200;
}

.main {
  margin: 0 auto;
}

.header, .editor-panel {
  z-index: 80;
}

.overlay {
  z-index: 50;
}

/* width */
::-webkit-scrollbar {
  width: 6px;
  height: 0px;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: var(--clr-scrollbar);
  border-radius: 8px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: var(--clr-scrollbar-hover);
}

.app.full .editor-panel {
  opacity: 0;
  transform: translateY(130%);
}

.app.full .header .content {
  opacity: 0;
  pointer-events: none;
}

.app.full .header .btn.fullscreen {
  position: fixed;
  top: 24px;
  right: 24px;
}

.app.full .overlay {
  display: none;
}

@media (min-width: 768px) {
  .navbar::after {
    content: '';
    width: 100%;
    height: 150px;
    position: absolute;
    bottom: -20px;
    background-color: rgb(var(--clr-background) / 0.7);
    backdrop-filter: saturate(150%) blur(24px);
    z-index: -1;
  }

  .main .section > * {
    padding: 0 16px;
  }
}

@media (min-width: 1024px) {
  .main-wrapper {
    position: relative;
    left: 250px;
    width: calc(100% - 250px);
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 20px;
    min-height: 100vh;
  }

  .app.full .main-wrapper {
    left: 0;
    width: 100%;
    padding: 0;
  }

  .app.full .editor-panel {
    transform: translateX(-130%);
  }

  .editor-panel {
    transform: none;
    top: 129px;
    left: 0px;
    height: min-content;
    max-height: calc(100vh - 180px);
  }
  .editor-panel.open {
    transform: none;
  }
  .editor-panel button.toggle {
    display: none;
  }
  .panel-body {
    max-height: calc(100vh - 180px - 56px);
  }

  .header {
    width: calc(100% - 286px);
    top: 20px;
  }
  .previewer {
    top: 110px;
    max-height: calc(100vh - 180px);
  }

  .header, .previewer {
    max-width: 1310px;
  }

  .main .section > * {
    padding: 0 24px;
  }
}

